# gf2_rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
docs/: array.md  gauss.md  gf2.md  lu.md  mat.md  matrix.md  poly.md  polynomial.md  slice.md  store.md  store_traits.md  unsigned.md  vec.md  vector.md
examples/: charpoly01.rs  charpoly02.rs  convolution01.rs  convolution02.rs  convolution03.rs  describe01.rs  dot01.rs  dot02.rs  dot03.rs  dot04.rs  from_string01.rs  inverse01.rs  lu01.rs  lu02.rs  lu03.rs  poly01.rs  random01.rs  random02.rs  reduce01.rs  set01.rs  set02.rs  shift01.rs  shift02.rs  sub01.rs  to_string01.rs  to_string02.rs  unset01.rs  unset02.rs  words01.rs
examples/naive/: mod.rs
src/: array.rs  gauss.rs  iterators.rs  lib.rs  lu.rs  mat.rs  matrix.rs  poly.rs  polynomial.rs  rng.rs  slice.rs  store.rs  store_traits.rs  unsigned.rs  vec.rs  vector.rs
tests/: mat.rs  slice.rs  unsigned.rs  vec.rs
